[package]
name = "learn2slither"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "snake"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[profile.release]
opt-level = 3
